--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     font-size: 1.5em;
     text-align: center;
     margin-top: 20px;
-    text-transform: lower-case;
+    text-transform: lowercase;
 }
 
 h1 {
